...
@Composable
fun DesignSystemPlaygroundScreen() {
    var isDarkTheme by rememberSaveable { mutableStateOf(false) }
    var selectedComponent by rememberSaveable { mutableStateOf("Toolbar") }

    val components: List<Pair<String, @Composable () -> Unit>> = listOf(
        "Character Card" to { CardCharacterContent() },
        "Dialog" to { DialogPreviewContent() },
        "Search Toolbar" to {
            SearchToolbarPreviewContent(
                search = "Rick and Morty",
                onSearchChange = {}
            )
        },
...
